<resources>
    <string name="app_name">Weather App</string>
    <string name="weather_image">Weather Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="max_temperature">MAX TEMPERATURE</string>
    <string name="min_temperature">MIN TEMPERATURE</string>
    <string name="image_depicting_weather">Image depicting weather</string>
    <string name="displayWeather">Display Weather</string>
    <string name="more"><![CDATA[More >]]></string>
    <string name="next_7_days">Next 7 Days</string>
</resources>
