<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/detailFragment"
                                             xmlns:tools="http://schemas.android.com/tools">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="27 Jan 2020"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.15"
            app:layout_constraintHeight_percent="0.15"
            app:srcCompat="@drawable/ic_cloudy_day_weather_svgrepo_com"
            android:id="@+id/weatherSmallIcon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date"
            android:contentDescription="@string/image_depicting_weather"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weatherDescription"
            app:layout_constraintLeft_toRightOf="@+id/weatherSmallIcon"
            app:layout_constraintTop_toTopOf="@+id/weatherSmallIcon"
            app:layout_constraintBottom_toBottomOf="@+id/weatherSmallIcon"
            tools:text="Cloudy"
            android:layout_marginStart="@dimen/marginStart"
            android:textSize="20sp"/>

    <TextView
            android:text="@string/min_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/MinTemperatureText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherSmallIcon"/>

    <TextView
            android:text="@string/max_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/MaxTemperatureText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MinTemperatureText"/>

    <TextView
            tools:text="20 Degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/MinTemperatureValue"
            app:layout_constraintLeft_toRightOf="@+id/MinTemperatureText"
            app:layout_constraintTop_toBottomOf="@+id/weatherSmallIcon"
            android:layout_marginStart="@dimen/marginStart"/>

    <TextView
            tools:text="40 Degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/MaxTemperatureValue"
            app:layout_constraintLeft_toRightOf="@+id/MaxTemperatureText"
            app:layout_constraintTop_toBottomOf="@+id/MinTemperatureValue"
            android:layout_marginStart="@dimen/marginStart"/>

    <Button
            android:text="@string/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/more_info"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/MaxTemperatureValue"/>

    <Button
            android:text="@string/next_7_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/next7Days"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MaxTemperatureValue"/>

</android.support.constraint.ConstraintLayout>